# osrs-simulator

./: .gitignore  AGENTS.md  CMakeLists.txt  CONTEXT.md  README.md  package-lock.json  package.json  progress.txt
apps/osrs-sim-cli/: CMakeLists.txt
apps/osrs-sim-cli/src/: main.cpp
cpp/: CMakeLists.txt
cpp/apps/osrs-sim-cli/: CMakeLists.txt  Main.cpp
cpp/common/: CMakeLists.txt
cpp/common/src/: Logging.cpp  Logging.h  Types.cpp  Types.h  types.cpp  types.h
cpp/common/tests/: LoggingSmoke.cpp
cpp/engine/: CMakeLists.txt
cpp/engine/src/: ActorMovement.cpp  ActorMovement.h  CombatCompositionDatabase.cpp  CombatCompositionDatabase.h  CombatQueue.cpp  CombatQueue.h  CombatService.cpp  CombatService.h  DatabaseService.cpp  DatabaseService.h  DevelopmentPlayerChaseScenario.cpp  DevelopmentPlayerChaseScenario.h  DpsService.cpp  DpsService.h  EncounterContext.cpp  EncounterContext.h  Engine.cpp  Engine.h  EngineBindings.cpp  EquipmentDatabase.cpp  EquipmentDatabase.h  EquipmentSet.cpp  EquipmentSet.h  LineOfSight.cpp  LineOfSight.h  NpcDatabase.cpp  NpcDatabase.h  Pathing.cpp  Pathing.h  Scene.cpp  Scene.h  Tile.cpp  Tile.h  WeaponDatabase.cpp  WeaponDatabase.h  World.cpp  World.h  world.cpp  world.h
cpp/engine/src/behavior/: DefaultNpcBehavior.cpp  DefaultNpcBehavior.h  NpcBehavior.cpp  NpcBehavior.h
cpp/engine/src/debug/: DevelopmentPlayerChaseScenario.cpp  DevelopmentPlayerChaseScenario.h
cpp/engine/src/encounter/: ActiveEncounter.cpp  ActiveEncounter.h  EncounterRunner.cpp  EncounterRunner.h
cpp/engine/src/recording/: EncounterRecorder.cpp  EncounterRecorder.h  EncounterRecording.cpp  EncounterRecording.h  RecordingPlayback.cpp  RecordingPlayback.h
cpp/engine/tests/: ActorMovementTest.cpp  CombatCompositionDatabaseTest.cpp  CombatQueueTest.cpp  DatabaseServiceTest.cpp  DevelopmentPlayerChaseScenarioTest.cpp  DpsServiceTest.cpp  EncounterRunnerTest.cpp  EngineTest.cpp  EquipmentDatabaseTest.cpp  EquipmentSetTest.cpp  LineOfSightTest.cpp  NpcDatabaseTest.cpp  PathingTest.cpp  RecordingTest.cpp  SceneTest.cpp  WorldTest.cpp  world_test.cpp
cpp/sim/: CMakeLists.txt
cpp/sim/src/: scenario.cpp  scenario.h
cpp/sim/tests/: scenario_test.cpp
data/: combat_compositions.json  equipment.json  manifest.json  npcs.json  weapons.json
docs/adr/: 0001-monorepo-layout.md  0002-deterministic-engine.md  0003-osrs-scene-model.md  0004-coarse-actor-occupancy.md  0005-world-owns-scenes-and-actors.md  0006-web-development-viewer.md  0007-engine-owned-equipment-database.md  0008-file-backed-engine-dataset.md  0009-actor-owned-combat-queues.md  0010-engine-owned-npc-behaviors.md  0011-encounter-runner-orchestrates-active-encounters.md  0012-encounter-recordings-are-observation-logs.md  0013-structured-damage-events-for-recordable-combat.md  0014-engine-owned-recording-playback.md  0015-encounter-recording-fact-model.md
docs/agents/: domain.md
docs/architecture/: repo-structure.md  simulation-model.md  tick-update-flow.md
docs/osrs/: combat-rolls.md
tools/: README.md  build.sh  build_wasm.sh  ralph_afk.sh  ralph_once.sh  ralph_prompt.md
web/: README.md  index.html  package.json  tsconfig.json  vite.config.ts
web/public/recordings/: minimal-encounter-recording.json
web/src/: App.vue  DpsCalculatorView.vue  PlayerChaseView.vue  RecordingView.vue  dpsCalculator.ts  playerChaseDebug.ts  playerChasePlayback.ts  router.ts  routes.ts  scenarios.ts
web/src/wasm/: EngineModule.ts
web/test/: dps-calculator-view.test.mjs  dps-calculator.test.mjs  engine-module-loader.test.mjs  generated-dps-service.test.mjs  generated-recording-playback.test.mjs  player-chase-debug.test.mjs  player-chase-playback.test.mjs  player-chase-scenario.test.mjs  recording-view.test.mjs  routes.test.mjs  scenarios.test.mjs  wasm-reactivity.test.mjs
